--- a/processor/src/main/resources/org/soujava/example/model/newInstance.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/newInstance.mustache
@@ -6,6 +6,9 @@ public final class {{targetClassName}} {
   private {{targetClassName}}() {
   }
 
+  public String getEntityName() {
+    return "{{entityName}}";
+ }
 
   public static {{sourceClassName}} newInstance() {
     return new {{sourceClassName}}();
