--- a/processor/src/main/resources/org/soujava/example/model/assessor.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/assessor.mustache
@@ -13,7 +13,7 @@ public final class {{className}} {
 }
 
 public void setValue({{entity}} object, Object value) {
-    object.{{setName}}(({{entity}})value);
+    object.{{setName}}(({{type}})value);
 }
 
 
