--- a/processor/src/main/resources/org/soujava/example/model/fieldmetadata.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/fieldmetadata.mustache
@@ -1,30 +1,37 @@
 package {{packageName}};
 
+import org.soujava.example.model.FieldMetadata;
 
-public final class {{className}} {
+public final class {{className}} implements FieldMetadata {
 
 
+  @Override
    public boolean isId() {
     return {{id}};
   }
+
+  @Override
   public String getName() {
     return "{{name}}";
   }
 
-   public String getFieldName() {
+   @Override
+  public String getFieldName() {
     return "{{fieldName}}";
   }
 
+  @Override
   public Object getValue({{entity}} object) {
     return object.{{reader}}();
   }
 
- public void setValue({{entity}} object, Object value) {
-   object.{{writer}}(({{type}})value);
- }
+  @Override
+   public void setValue({{entity}} object, Object value) {
+     object.{{writer}}(({{type}})value);
+   }
 
+  @Override
   public Class<?> getType()  {
-   return {{type}}.class;
+    return {{type}}.class;
   }
-
 }
