--- a/processor/src/main/resources/org/soujava/example/model/fieldmetadata.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/fieldmetadata.mustache
@@ -26,7 +26,7 @@ public final class {{className}} implements FieldMetadata {
    }
 
    @Override
-   public Object getValue(Object bean) {
+   public Object read(Object bean) {
       return (({{entity}}) bean).{{reader}}();
     }
 
