--- a/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
@@ -28,7 +28,7 @@ private final List<FieldMetadata> fields;
 
     @Override 
     public <T> T newInstance() {
-        return new {{sourceClassName}}(); 
+        return (T)new {{sourceClassName}}();
     }
 
     @Override
