updates mustache template

--- a/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
@@ -13,11 +13,11 @@ import static java.util.stream.Collectors.collectingAndThen;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
-public final class {{targetClassName}} implements EntityMetadata {
+public final class {{className}} implements EntityMetadata {
 
 private final List<FieldMetadata> fields;
 
-    public {{targetClassName}}() {
+    public {{className}}() {
         this.fields = new ArrayList<>();
     }
 
