--- a/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
@@ -23,7 +23,7 @@ private final List<FieldMetadata> fields;
 
     @Override
     public String getName() {
-        return "{{entityName}}";
+        return "{{name}}";
     }
 
     @Override 
