updates template source code

--- a/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
@@ -19,6 +19,9 @@ private final List<FieldMetadata> fields;
 
     public {{className}}() {
         this.fields = new ArrayList<>();
+    {{#fields}}
+        this.fields.add(new {{.}}()));
+    {{/fields}}
     }
 
     @Override
