fixes in the compiler template

--- a/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
@@ -20,7 +20,7 @@ private final List<FieldMetadata> fields;
     public {{className}}() {
         this.fields = new ArrayList<>();
     {{#fields}}
-        this.fields.add(new {{.}}()));
+        this.fields.add(new {{.}}());
     {{/fields}}
     }
 
