creates field simpleName

--- a/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
@@ -29,6 +29,17 @@ private final List<FieldMetadata> fields;
         return "{{name}}";
     }
 
+    @Override
+    public String getClassName() {
+         return "{{entity}}";
+    }
+
+    @Override
+    public String getSimpleName() {
+        return "{{simpleName}}";
+    }
+
+
     @Override 
     public <T> T newInstance() {
         return (T)new {{entity}}();
