updates mustache entity

--- a/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
+++ b/processor/src/main/resources/org/soujava/example/model/entitymetadata.mustache
@@ -31,12 +31,12 @@ private final List<FieldMetadata> fields;
 
     @Override
     public String getClassName() {
-         return "{{entity}}";
+         return "{{entityQualified}}";
     }
 
     @Override
     public String getSimpleName() {
-        return "{{simpleName}}";
+        return "{{entity}}";
     }
 
 
