--- a/processor/src/main/resources/classmappings.mustache
+++ b/processor/src/main/resources/classmappings.mustache
@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import org.soujava.example.model.ClassMappings;
 
 public final class DefaultClassMappings implements ClassMappings {
 
