--- a/processor/src/main/resources/classmappings.mustache
+++ b/processor/src/main/resources/classmappings.mustache
@@ -4,7 +4,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import org.soujava.example.model.ClassMappings;
+import org.soujava.medatadata.api.ClassMappings;
 
 public final class DefaultClassMappings implements ClassMappings {
 
