--- a/processor/src/main/resources/entitymetadata.mustache
+++ b/processor/src/main/resources/entitymetadata.mustache
@@ -6,7 +6,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import org.soujava.example.model.EntityMetadata;
+import org.soujava.medatadata.api.EntityMetadata;
 
 import static java.util.function.Function.identity;
 import static java.util.stream.Collectors.collectingAndThen;
