--- a/processor/src/main/resources/classmappings.mustache
+++ b/processor/src/main/resources/classmappings.mustache
@@ -1,10 +1,11 @@
-package org.soujava.example.model;
+package org.soujava.metadata.processor;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import org.soujava.medatadata.api.ClassMappings;
+import org.soujava.metadata.processor.ClassMappings;
+import org.soujava.metadata.processor.EntityMetadata;
 
 public final class DefaultClassMappings implements ClassMappings {
 
