--- a/processor/src/main/resources/fieldmetadata.mustache
+++ b/processor/src/main/resources/fieldmetadata.mustache
@@ -1,6 +1,6 @@
 package {{packageName}};
 
-import org.soujava.medatadata.api.FieldMetadata;
+import org.soujava.metadata.processor.FieldMetadata;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.Collections;
