adds Generated in the Classmappings

--- a/processor/src/main/resources/classmappings.mustache
+++ b/processor/src/main/resources/classmappings.mustache
@@ -7,6 +7,9 @@ import java.util.Optional;
 import org.soujava.metadata.processor.ClassMappings;
 import org.soujava.metadata.processor.EntityMetadata;
 
+import javax.annotation.processing.Generated;
+
+@Generated("Soujava ClassMappings Generator")
 public final class DefaultClassMappings implements ClassMappings {
 
     private final List<EntityMetadata> entities;
