--- a/processor/src/main/resources/entitymetadata.mustache
+++ b/processor/src/main/resources/entitymetadata.mustache
@@ -14,6 +14,9 @@ import static java.util.stream.Collectors.collectingAndThen;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
+import javax.annotation.processing.Generated;
+
+@Generated("Soujava EntityMetadata Generator")
 public final class {{className}} implements EntityMetadata {
 
 private final List<FieldMetadata> fields;
