adds Generated in the fieldmetadata

--- a/processor/src/main/resources/fieldmetadata.mustache
+++ b/processor/src/main/resources/fieldmetadata.mustache
@@ -5,6 +5,9 @@ import java.util.HashSet;
 import java.util.Set;
 import java.util.Collections;
 
+import javax.annotation.processing.Generated;
+
+@Generated("Soujava FieldMetadata Generator")
 public final class {{className}} implements FieldMetadata {
 
   private Set<Class<?>> arguments;
