adds date at Generated annotation in classmappings

--- a/processor/src/main/resources/classmappings.mustache
+++ b/processor/src/main/resources/classmappings.mustache
@@ -9,7 +9,7 @@ import org.soujava.metadata.processor.EntityMetadata;
 
 import javax.annotation.processing.Generated;
 
-@Generated("Soujava ClassMappings Generator")
+@Generated("Soujava ClassMappings Generator", date = "{{now}}")
 public final class DefaultClassMappings implements ClassMappings {
 
     private final List<EntityMetadata> entities;
