--- a/processor/src/main/resources/fieldmetadata.mustache
+++ b/processor/src/main/resources/fieldmetadata.mustache
@@ -7,7 +7,7 @@ import java.util.Collections;
 
 import javax.annotation.processing.Generated;
 
-@Generated("Soujava FieldMetadata Generator", date = "{{now}}")
+@Generated(value= "Soujava FieldMetadata Generator", date = "{{now}}")
 public final class {{className}} implements FieldMetadata {
 
   private Set<Class<?>> arguments;
