updtes api path

--- a/processor/src/main/resources/classmappings.mustache
+++ b/processor/src/main/resources/classmappings.mustache
@@ -4,8 +4,8 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import org.soujava.metadata.processor.ClassMappings;
-import org.soujava.metadata.processor.EntityMetadata;
+import org.soujava.medatadata.api.ClassMappings;
+import org.soujava.medatadata.api.EntityMetadata;
 
 import javax.annotation.processing.Generated;
 
