--- a/processor/src/main/resources/entitymetadata.mustache
+++ b/processor/src/main/resources/entitymetadata.mustache
@@ -6,8 +6,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import org.soujava.metadata.processor.EntityMetadata;
-import org.soujava.metadata.processor.FieldMetadata;
+import org.soujava.medatadata.api.EntityMetadata;
+import org.soujava.medatadata.api.FieldMetadata;
 
 import static java.util.function.Function.identity;
 import static java.util.stream.Collectors.collectingAndThen;
